--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Lesson 52 Transiton & Animation</title>
+    <title>Animation</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="container-fluid">
+      <div class="container">
+        <div class="mover-box">mover box</div>
+      </div>
+    </section>
+  </body>
 </html>
